<resources>
    <string name="app_name">Proyek Jetpack</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv">Tv Show</string>
    <string name="title_notifications">Notifications</string>

    <string name="change_language_settings">Change Language Settings</string>
    <string name="Favorite">Favorite</string>
    <string name="Release">Release Today</string>
    <string name="Reminder">Reminder</string>

    <string name="text_title">Title</string>
    <string name="text_release">Release</string>
    <string name="text_desc">Overview</string>
    <string name="rating">Rating</string>
    <string name="genre">Genre</string>

    <string name="notif_text">Hello good morning have you open movie catalogue app today?</string>
    <string name="notif_update">Check this out today </string>
    <string name="notif_update2">has been released</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="release_info">Reminder showing the movie that released today</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_info">Reminder for return to app</string>

    <string name="search_hint">Search...</string>

    <string name="appwidget_text">Movie Catalogue</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">NO DATA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
